Prevent x-overflow. Closes #20

--- a/entry.scss
+++ b/entry.scss
@@ -20,6 +20,11 @@ $ease-out-expo: cubic-bezier(0.19, 1, 0.22, 1);
   color: inherit;
 }
 
+html {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
 body {
   font-family: 'Inconsolata', monospace;
   font-size: 16px;
